lstm straight from neuralhydrology, forward pass returning a value

--- a/lstm_bmi_config.yml
+++ b/lstm_bmi_config.yml
@@ -1,4 +1,5 @@
 time_step: '1 hour'
+initial_state: 'zero'
 nwarm: 1772
 istart: 1772 
 iend: 2492
@@ -13,6 +14,6 @@ forcing_file: ./data/forcing-cat-87.txt
 h_t_init_file: ./data/h_t_start.csv
 c_t_init_file: ./data/c_t_start.csv
 train_cfg_file: '/glade/work/jframe/neuralhydrology/runs/hourly_test_run_1008_154114/config.yml'
-verbose: 1
+verbose: 11
 elev_mean: 760
 slope_mean: 46
