--- a/lstm_bmi_config.yml
+++ b/lstm_bmi_config.yml
@@ -5,7 +5,7 @@ lat: 44.60797
 lon: -67.93524
 h_t_init_file: ./data/h_t_start.csv
 c_t_init_file: ./data/c_t_start.csv
-train_cfg_file: '/glade/work/jframe/neuralhydrology/runs/hourly_test_run_1008_154114/config.yml'
+train_cfg_file: ./trained_neuralhydrology_models/hourly_test_run_1008_154114/config.yml
 verbose: 1
 elev_mean: 92.68
 slope_mean: 17.79072
