--- a/lstm_bmi_config.yml
+++ b/lstm_bmi_config.yml
@@ -1,11 +1,13 @@
 time_step: '1 hour'
 initial_state: 'zero'
+basin_name: 'Narraguagus River at Cherryfield, Maine'
+basin_id: '01022500'
 area_sqkm: 620.38
 lat: 44.60797
 lon: -67.93524
-h_t_init_file: ./data/h_t_start.csv
-c_t_init_file: ./data/c_t_start.csv
-train_cfg_file: ./trained_neuralhydrology_models/hourly_test_run_1008_154114/config.yml
+train_cfg_file: ./trained_neuralhydrology_models/hourly_slope_mean_2708_231918/config.yml
+#train_cfg_file: ./trained_neuralhydrology_models/hourly_test_run_2708_125607/config.yml
+#train_cfg_file: ./trained_neuralhydrology_models/hourly_test_run_3108_074345/config.yml
 verbose: 1
 elev_mean: 92.68
 slope_mean: 17.79072
