frac timesteps, rm data dict, notebooks, 0 runoff bound, readme, +more!

--- a/bmi_config_files/fake_hourly_slope_mean_precip_temp.yml
+++ b/bmi_config_files/fake_hourly_slope_mean_precip_temp.yml
@@ -1,6 +1,6 @@
 # This is the configuration file for the trained LSTM. 
 # This is required to run the model, but should not be modified.
-train_cfg_file: ./trained_neuralhydrology_models/hourly_slope_mean_precip_temp/config.yml
+train_cfg_file: ../trained_neuralhydrology_models/hourly_slope_mean_precip_temp/config.yml
 
 # Meta data about how to run the model
 time_step: '1 hour'
