--- a/bmi_config_files/01022500_hourly_all_attributes_forcings.yml
+++ b/bmi_config_files/01022500_hourly_all_attributes_forcings.yml
@@ -5,7 +5,7 @@ basin_id: '01022500'
 area_sqkm: 620.38
 lat: 44.60797
 lon: -67.93524
-train_cfg_file: ../trained_neuralhydrology_models/hourly_all_attributes_and_forcings/config.yml
+train_cfg_file: ./trained_neuralhydrology_models/hourly_all_attributes_and_forcings/config.yml
 verbose: 0
 elev_mean: 92.68
 slope_mean: 17.79072
