--- a/ngen_files/data/lstm/rc_files/realization_config_lstm_HUC01.json
+++ b/ngen_files/data/lstm/rc_files/realization_config_lstm_HUC01.json
@@ -5,29 +5,27 @@
         {
           "name": "bmi_python",
           "params": {
-              "python_type": "lstm.bmi_lstm.bmi_LSTM",
+              "python_type": "lstm.bmi_LSTM",
               "model_type_name": "bmi_LSTM",
-              "init_config": "./extern/lstm_py/bmi_config_files/CAMELS-test/{{id}}.yml",
+              "init_config": "./extern/lstm_py/bmi_config_files/HUC01/{{id}}.yml",
               "main_output_variable": "land_surface_water__runoff_volume_flux",
               "uses_forcing_file": false,
               "variables_names_map" : {
                   "streamflow_cms": "land_surface_water__runoff_volume_flux"},
               "pytorch_model_path": "./data/lstm/sugar_creek_trained.pt",
-              "normalization_path": "./data/lstm//input_scaling.csv",
-              "initial_state_path": "./data/lstm//initial_states.csv",
+              "normalization_path": "./data/lstm/input_scaling.csv",
+              "initial_state_path": "./data/lstm/initial_states.csv",
               "useGPU": false
         }
       }
       ],
         "forcing": {
-            "file_pattern": "{{id}}.csv",
-            "path": "./data/forcing/CAMELS-test/",
-            "provider": "CsvPerFeature"
+            "path": "./data/forcing/cat-67_2015-12-01 00_00_00_2015-12-30 23_00_00.csv"
         }
     },
     "time": {
-        "start_time": "2007-01-01 00:00:00",
-        "end_time": "2007-02-01 00:00:00",
+        "start_time": "2015-12-01 00:00:00",
+        "end_time": "2015-12-30 23:00:00",
         "output_interval": 3600
     }
 }
