--- a/ngen_files/data/lstm/rc_files/realization_config_lstm_cat67a.json
+++ b/ngen_files/data/lstm/rc_files/realization_config_lstm_cat67a.json
@@ -3,11 +3,11 @@
       "formulations":
       [
         {
-          "name": "bmi_python",
+          "name": "bmi_python", 
           "params": {
-              "python_type": "lstm.bmi_LSTM",
+              "python_type": "lstm.bmi_lstm.bmi_LSTM",
               "model_type_name": "bmi_LSTM",
-              "init_config": "./extern/lstm_py/bmi_config_files/cat-67.yml",
+              "init_config": "./data/lstm/yml_files/HUC01/cat-67.yml",
               "main_output_variable": "land_surface_water__runoff_volume_flux",
               "uses_forcing_file": false,
               "variables_names_map" : {
