--- a/ngen_files/data/lstm/rc_files/realization_config_lstm_cat67a.json
+++ b/ngen_files/data/lstm/rc_files/realization_config_lstm_cat67a.json
@@ -5,9 +5,9 @@
         {
           "name": "bmi_python",
           "params": {
-              "python_type": "lstm.bmi_LSTM",
-              "model_type_name": "bmi_LSTM",
-              "init_config": "./extern/lstm_py/bmi_config_files/cat-67.yml",
+              "python_type": "lstm.bmi_LSTM.bmi_LSTM",
+              "model_type_name": "bmi_LSTM",  
+              "init_config": "./data/lstm/yml_files/HUC01/cat-67.yml",
               "main_output_variable": "land_surface_water__runoff_volume_flux",
               "uses_forcing_file": false,
               "variables_names_map" : {
