--- a/.github/workflows/build_and_run_unit_test.yml
+++ b/.github/workflows/build_and_run_unit_test.yml
@@ -47,4 +47,4 @@ jobs:
         activate-environment: bmi_lstm
     
     - name: Run Unit Test LSTM
-      run: python ./lstm/run_bmi_unit_test.py
+      run: python lstm/run_bmi_unit_test.py
