--- a/.github/workflows/build_and_run_unit_test.yml
+++ b/.github/workflows/build_and_run_unit_test.yml
@@ -38,13 +38,14 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         
-    - name: create conda env
-      run: conda env create -f environment.yml
+    #- name: create conda env
+    #  run: $CONDA/bin/conda env create -f environment.yml
         
     - name: activate conda
     - uses: conda-incubator/setup-miniconda@v2
       with:
         activate-environment: bmi_lstm
+        environment-file: environment.yml
     
     - name: Run Unit Test LSTM
       run: python lstm/run_bmi_unit_test.py
