--- a/.github/workflows/build_and_run_unit_test.yml
+++ b/.github/workflows/build_and_run_unit_test.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9]
+        #python-version: [3.7, 3.8, 3.9]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
@@ -33,10 +33,11 @@ jobs:
     - name: Checkout the commit
       uses: actions/checkout@v2 #jg: build in
       
-    - name: setup python ${{ matrix.python-version }}
+    - name: setup python # ${{ matrix.python-version }}
       uses: actions/setup-python@v2 #jg: build in via gh
       with:
-        python-version: ${{ matrix.python-version }}
+        pythong-version: 3.7
+        #python-version: ${{ matrix.python-version }}
         
     #- name: create conda env
     #  run: $CONDA/bin/conda env create -f environment.yml
