--- a/.github/workflows/build_and_run_unit_test.yml
+++ b/.github/workflows/build_and_run_unit_test.yml
@@ -47,6 +47,9 @@ jobs:
       with:
         activate-environment: bmi_lstm
         environment-file: ./environment.yml
-    
+        
+    - name: install lstm py package
+      run: pip install lstm
+      
     - name: Run Unit Test LSTM
       run: python lstm/run_bmi_unit_test.py
