--- a/.github/workflows/build_and_run_unit_test.yml
+++ b/.github/workflows/build_and_run_unit_test.yml
@@ -43,14 +43,17 @@ jobs:
     #- name: create conda env
     #  run: $CONDA/bin/conda env create -f environment.yml
         
-    - name: activate conda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        activate-environment: bmi_lstm
-        environment-file: ./environment.yml
+    #- name: activate conda
+    #  uses: conda-incubator/setup-miniconda@v2
+    #  with:
+    #    activate-environment: bmi_lstm
+    #    environment-file: ./environment.yml
+    #    auto-activate-base: false
         
     - name: install lstm py package
-      run: pip install lstm
+      run: |
+        python -m pip install --upgrade pip
+        pip install lstm
       
     - name: Run Unit Test LSTM
       run: python lstm/run_bmi_unit_test.py
