--- a/.github/workflows/build_and_run_unit_test.yml
+++ b/.github/workflows/build_and_run_unit_test.yml
@@ -53,7 +53,7 @@ jobs:
     - name: install lstm py package
       run: |
         python -m pip install --upgrade pip
-        pip install lstm=1.0
+        pip install lstm==1.0
       
     - name: Run Unit Test LSTM
       run: python lstm/run_bmi_unit_test.py
