--- a/.github/workflows/build_test_validation.yml
+++ b/.github/workflows/build_test_validation.yml
@@ -23,8 +23,8 @@ jobs:
     # The type of runner that the job will run on
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
@@ -53,6 +53,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e .
       
-    - name: Run Unit Test LSTM
-      #run: python lstm/run_bmi_unit_test.py
+    - name: Run BMI Unit Test LSTM
+      run: python lstm/run_bmi_unit_test.py
+      
+    - name: Run Standalone LSTM
       run: python -m lstm
