--- a/.github/workflows/build_test_validation.yml
+++ b/.github/workflows/build_test_validation.yml
@@ -23,7 +23,7 @@ jobs:
     # The type of runner that the job will run on
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
       fail-fast: false
     runs-on: ${{ matrix.os }}
