--- a/.github/workflows/build_test_validation.yml
+++ b/.github/workflows/build_test_validation.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
+        python-version: [3.7, 3.8, 3.9]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
