--- a/.github/workflows/test_unit_standalone.yml
+++ b/.github/workflows/test_unit_standalone.yml
@@ -32,10 +32,10 @@ jobs:
     - name: Checkout the commit
       uses: actions/checkout@v4
       
-    - name: setup python # ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+    #- name: setup python # ${{ matrix.python-version }}
+    #  uses: actions/setup-python@v4
+    #  with:
+    #    python-version: ${{ matrix.python-version }}
         
     #- name: create conda env
     #  run: $CONDA/bin/conda env create -f environment.yml
@@ -45,6 +45,7 @@ jobs:
       with:
         activate-environment: bmi_lstm
         environment-file: ./environment.yml
+        python-version: ${{ matrix.python-version }}
         # this may not be necessary? tbd..
         auto-activate-base: false
         
