--- a/.github/workflows/test_unit_standalone.yml
+++ b/.github/workflows/test_unit_standalone.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         activate-environment: bmi_lstm
         environment-file: ./environment.yml
-        python-version: ${{ matrix.python-version }}
+        #python-version: ${{ matrix.python-version }}
         # this may not be necessary? tbd..
         auto-activate-base: false
         
