--- a/.github/workflows/test_unit_standalone.yml
+++ b/.github/workflows/test_unit_standalone.yml
@@ -23,17 +23,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest] # windows will fail(?)
-        python-version: [3.7, 3.8, 3.9] # 3.9(+) will fail
+        python-version: ['3.10', 3.11, 3.12]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Checkout the commit
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       
     - name: setup python # ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
         
@@ -41,10 +41,11 @@ jobs:
     #  run: $CONDA/bin/conda env create -f environment.yml
         
     - name: activate conda
-      uses: conda-incubator/setup-miniconda@v2
+      uses: conda-incubator/setup-miniconda@v3
       with:
         activate-environment: bmi_lstm
         environment-file: ./environment.yml
+        #python-version: ${{ matrix.python-version }}
         # this may not be necessary? tbd..
         auto-activate-base: false
         
