--- a/trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_9/config.yml
+++ b/trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_9/config.yml
@@ -16,13 +16,13 @@ dynamic_inputs:
 - SPFH_2maboveground
 - UGRD_10maboveground
 - VGRD_10maboveground
-epochs: 2
-experiment_name: nh_AORC_hourly_25yr_seq999_seed101
+epochs: 9
+experiment_name: nh_AORC_hourly_25yr
 forcings:
 - aorc_hourly
 head: regression
-hidden_size: 126
-img_log_dir: /home/jmframe/neuralhydrology/runs/nh_AORC_hourly_25yr_seq999_seed101_0701_143442/img_log
+hidden_size: 64
+img_log_dir: /home/jmframe/neuralhydrology/runs/nh_AORC_hourly_25yr_1210_112435_9/img_log
 initial_forget_bias: 3
 learning_rate:
   0: 0.001
@@ -30,11 +30,10 @@ learning_rate:
   4: 0.0005
 log_interval: 5
 log_n_figures: 100
-log_tensorboard: false
+log_tensorboard: true
 loss: NSE
 metrics:
 - NSE
-- KGE
 model: cudalstm
 num_workers: 16
 number_of_basins: 515
@@ -43,20 +42,20 @@ output_activation: linear
 output_dropout: 0.4
 package_version: 1.10.0
 predict_last_n: 1
-run_dir: /home/jmframe/neuralhydrology/runs/nh_AORC_hourly_25yr_seq999_seed101_0701_143442
+run_dir: ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_9
 save_weights_every: 1
-seed: 101
-seq_length: 999
+seed: 184778
+seq_length: 336
 static_attributes:
 - elev_mean
 - slope_mean
 target_variables:
 - QObs(mm/h)
 test_basin_file: /home/jmframe/data/CAMELS_US/list_515_camels_basins_aorc.txt
-test_end_date: 30/09/1985
-test_start_date: 01/10/2023
+test_end_date: 30/09/2006
+test_start_date: 01/10/2005
 train_basin_file: /home/jmframe/data/CAMELS_US/list_515_camels_basins_aorc.txt
-train_dir: /home/jmframe/neuralhydrology/runs/nh_AORC_hourly_25yr_seq999_seed101_0701_143442/train_data
+train_dir: /home/jmframe/neuralhydrology/runs/nh_AORC_hourly_25yr_1210_112435_9/train_data
 train_end_date: 30/09/2023
 train_start_date: 01/10/1998
 validate_every: 1
