--- a/bmi_config_files/05057200_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/05057200_nh_AORC_hourly_ensemble.yml
@@ -9,6 +9,9 @@ train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_8/config.yml
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_9/config.yml
+- ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_seq999_seed101_0701_143442/config.yml
+- ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_seq999_seed103_2701_171540/config.yml
+- ../trained_neuralhydrology_models/nh_AORC_hourly_slope_elev_precip_temp_seq999_seed101_2801_191806/config.yml
 verbose: 0
 elev_mean: 447.5
 slope_mean: 2.33897
