--- a/bmi_config_files/08023080_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/08023080_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 187.61
+basin_id: 8023080
+basin_name: Bayou Grand Cane near Stanley, LA
+elev_mean: 86.85
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 31.97933
+lon: -93.93408
+slope_mean: 4.78985
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
