--- a/bmi_config_files/10259000_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/10259000_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 22.46
+basin_id: 10259000
+basin_name: ANDREAS C NR PALM SPRINGS CA
+elev_mean: 1233.96
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 33.76002
+lon: -116.55002
+slope_mean: 169.65242
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
