--- a/bmi_config_files/01333000_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/01333000_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 112.16
+basin_id: 1333000
+basin_name: GREEN RIVER AT WILLIAMSTOWN, MA
+elev_mean: 485.91
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 42.70897
+lon: -73.19677
+slope_mean: 74.78725
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
