--- a/bmi_config_files/02046000_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/02046000_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 288.52
+basin_id: 2046000
+basin_name: STONY CREEK NEAR DINWIDDIE, VA
+elev_mean: 86.64
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 37.06709
+lon: -77.60249
+slope_mean: 6.04481
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
