--- a/bmi_config_files/03439000_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/03439000_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 178.67
+basin_id: 3439000
+basin_name: FRENCH BROAD RIVER AT ROSMAN, NC
+elev_mean: 863.18
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 35.14333
+lon: -82.82472
+slope_mean: 63.23118
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
