--- a/bmi_config_files/05291000_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/05291000_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 1046.78
+basin_id: 5291000
+basin_name: WHETSTONE RIVER NEAR BIG STONE CITY, SD
+elev_mean: 432.13
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 45.29163
+lon: -96.48756
+slope_mean: 8.90129
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
