--- a/bmi_config_files/07057500_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/07057500_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 1456.44
+basin_id: 7057500
+basin_name: North Fork River near Tecumseh, MO
+elev_mean: 324.68
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 36.62303
+lon: -92.24813
+slope_mean: 11.24276
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
