--- a/bmi_config_files/07291000_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/07291000_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 479.3
+basin_id: 7291000
+basin_name: HOMOCHITTO RIVER AT EDDICETON, MS
+elev_mean: 129.13
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 31.50306
+lon: -90.7775
+slope_mean: 7.60783
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
