--- a/bmi_config_files/08267500_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/08267500_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 96.26
+basin_id: 8267500
+basin_name: RIO HONDO NEAR VALDEZ, NM
+elev_mean: 3006.6
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 36.54169
+lon: -105.5564
+slope_mean: 149.08403
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
