--- a/bmi_config_files/12010000_nh_AORC_hourly_ensemble.yml
+++ b/bmi_config_files/12010000_nh_AORC_hourly_ensemble.yml
@@ -1,11 +1,11 @@
-area_sqkm: 1897.33
-basin_id: 5057200
-basin_name: BALDHILL CREEK NR DAZEY, ND
-elev_mean: 447.5
+area_sqkm: 142.18
+basin_id: 12010000
+basin_name: NASELLE RIVER NEAR NASELLE, WA
+elev_mean: 145.18
 initial_state: zero
-lat: 47.22916
-lon: -98.12482
-slope_mean: 2.33897
+lat: 46.37399
+lon: -123.74348
+slope_mean: 47.2961
 time_step: 1 hour
 train_cfg_file:
 - ../trained_neuralhydrology_models/nh_AORC_hourly_25yr_1210_112435_7/config.yml
