chore: add 'develop' optional dep target w/ testing deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
 ]
 # TODO: aaraney: circle back to package data
 
+[project.optional-dependencies]
+develop = ["pytest", "netcdf4"]
+
 [tool.setuptools.dynamic]
 version = { attr = "lstm._version.__version__" }
 
