--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ authors = [
     { name = "Jessica Garrett", email = "jessica.garrett@noaa.gov" },
     { name = "Nels Frazier", email = "nels.frazier@noaa.gov" },
 ]
-maintainers = [{ name = "Austin Raney", email = "austin.raney@noaa.gov" }]
+maintainers = [
+    { name = "Austin Raney", email = "araney@lynker.com" },
+    { name = "Nels Frazier", email = "nels.frazier@noaa.gov" },
+]
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
 readme = "README.md"
